--- a/src/main/webapp/homePage.xhtml
+++ b/src/main/webapp/homePage.xhtml
@@ -2,11 +2,20 @@
 <!DOCTYPE html
         PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:h="http://java.sun.com/jsf/html" xml:lang="en" lang="en">
     <head>
         <title>Mathieu & Margot Companny</title>
     </head>
     <body>
         Hello everybody
+
+        <h:dataTable value="#{productEJB.findAllProduct()}" var="user">
+            <h:column>
+                <h:outputText value="#{userController.user.nom}"></h:outputText>
+                <h:outputText value="#{userController.user.prenom}"></h:outputText>
+                <h:outputText value="#{userController.user.age}"></h:outputText>
+            </h:column>
+        </h:dataTable>
     </body>
 </html>
