--- a/src/main/webapp/product.xhtml
+++ b/src/main/webapp/product.xhtml
@@ -3,19 +3,27 @@
         PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://java.sun.com/jsf/html" xml:lang="en" lang="en">
+      xmlns:h="http://java.sun.com/jsf/html" xml:lang="en" lang="en"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+
+    <ui:define name="css">
+        <h:outputStylesheet library="css" name="styles.css"/>
+    </ui:define>
+
     <h:head>
         <title>Mathieu &amp; Margot Companny</title>
-        <h:outputStylesheet library="css" name="styles.css"/>
     </h:head>
-    <h:body>
-        Hello everybody test
 
-        <h:dataTable value="#{productEJB.findAllProduct()}" var="user">
+    <h:body>
+        Marieu Company
+
+        <h:dataTable value="#{productController.findAllProduct()}" var="user">
             <h:column>
                 <h:outputText value="#{productController.product.name}"></h:outputText>
                 <h:outputText value="#{productController.product.description}"></h:outputText>
                 <h:outputText value="#{productController.product.price}"></h:outputText>
+                <img src="#{resource['images']}/${product.urlPicture}" alt="" />
+                
                 <h:commandButton action="#{productController.addToCart()}">Ajouter au pannier</h:commandButton>
             </h:column>
         </h:dataTable>
