--- a/src/main/webapp/produits.xhtml
+++ b/src/main/webapp/produits.xhtml
@@ -36,7 +36,7 @@
                     <p class="desc">Une petite description</p>
                     <p class="prix">12,5</p>
                     <button class="button">Ajouter au panier</button>
-                    <a href='#{productController.display("ficheProduit")}' class="">Voir plus</a>
+                    <a href='#{productController.display("ficheProduit")}' class="voirPlus">Voir plus</a>
                 </div>
                 <div class="product">
                     <p class="nom" >Test</p>
