--- a/src/main/webapp/ficheProduit.xhtml
+++ b/src/main/webapp/ficheProduit.xhtml
@@ -9,12 +9,19 @@
     <h:head>
         <title>Mathieu &amp; Margot Companny</title>
         <link type="text/css" rel="stylesheet"
-              href="/marieu.fou-1.0.0-SNAPSHOT/resources/css/styles.css" />
+              href="/marieu7735518915051112382.fou-1.0.0-SNAPSHOT/resources/css/styles.css" />
     </h:head>
 
 <h:body>
     <div class="bandeau-header">
-        <h1>Marieu Company</h1>
+        <div class="titre">
+            <h1>Marieu Company</h1>
+        </div>
+        <div class="panier">
+            <a href="panier.xhtml">
+                Nombre d'article dans votre panier(<h:outputText value="#{cartController.getNbProduitInCart()}"></h:outputText>)
+            </a>
+        </div>
     </div>
 
         <div class="fiche">
@@ -23,7 +30,7 @@
             <h:outputText class="desc" value="#{productController.product.description}"></h:outputText>
             <h:outputText class="prix" value="#{productController.product.price}"></h:outputText>
             <h:form>
-                <h:commandButton action="#{productController.addToCart(productController.product)}" class="button" value="Ajouter au panier"></h:commandButton>
+                <h:commandButton action="#{cartController.addToCart(productController.product.id)}" class="button" value="Ajouter au panier"></h:commandButton>
             </h:form>
         </div>
 </h:body>
