--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -9,7 +9,7 @@
 <h:head>
     <title>Mathieu &amp; Margot Companny</title>
     <link type="text/css" rel="stylesheet"
-          href="/marieu.fou-1.0.0-SNAPSHOT/resources/css/styles.css" />
+          href="/marieu7735518915051112382.fou-1.0.0-SNAPSHOT/resources/css/styles.css" />
 </h:head>
 
 <h:body>
